# songbird

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  markdownlint.yaml  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docker.yml  main-build.yml  pages.yaml  pypi-publish.yaml  style.yml  tests.yaml
app/: common.py  gdrive.py  itunes.py  main.py  requirements.txt  web.py  youtube.py
app/config/: settings.py
app/models/: itunes_api.py  modes.py
docs/: index.md
docs/songbirdcli/: cli.md  helpers.md  settings.md
songbird/: cli.py  requirements.txt  server.py
songbird/api/routers/: itunes.py  songs.py  youtube.py
songbird/config/: settings.py
songbird/songbirdcore/: common.py  gdrive.py  itunes.py  web.py  youtube.py
songbird/songbirdcore/models/: itunes_api.py
songbirdcli/: cli.py  helpers.py  requirements.txt  requirements.txt.blank  settings.py
tests/unit/: test_cli.py  test_helpers.py
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.1/songbirdcli/cli/: index.html
v0.2.1/songbirdcli/helpers/: index.html
v0.2.1/songbirdcli/settings/: index.html
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.2/search/: search_index.json
v0.2.2/songbirdcli/cli/: index.html
v0.2.2/songbirdcli/helpers/: index.html
v0.2.2/songbirdcli/settings/: index.html
v0.2.3/: 404.html  index.html  sitemap.xml
v0.2.3/search/: search_index.json
v0.2.3/songbirdcli/cli/: index.html
v0.2.3/songbirdcli/helpers/: index.html
v0.2.3/songbirdcli/settings/: index.html
v0.2.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.4/search/: search_index.json
v0.2.4/songbirdcli/cli/: index.html
v0.2.4/songbirdcli/helpers/: index.html
v0.2.4/songbirdcli/settings/: index.html
v0.2.5/: 404.html  index.html  sitemap.xml
v0.2.5/search/: search_index.json
v0.2.5/songbirdcli/cli/: index.html
v0.2.5/songbirdcli/helpers/: index.html
v0.2.5/songbirdcli/settings/: index.html
v0.2.6/: 404.html  index.html  sitemap.xml
v0.2.6/search/: search_index.json
v0.2.6/songbirdcli/cli/: index.html
v0.2.6/songbirdcli/helpers/: index.html
v0.2.6/songbirdcli/settings/: index.html
v0.2.7/: 404.html  index.html  sitemap.xml
v0.2.7/search/: search_index.json
v0.2.7/songbirdcli/cli/: index.html
v0.2.7/songbirdcli/helpers/: index.html
v0.2.7/songbirdcli/settings/: index.html
v0.2.8/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.8/songbirdcli/cli/: index.html
v0.2.8/songbirdcli/helpers/: index.html
v0.2.8/songbirdcli/settings/: index.html
v0.2.9/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.9/songbirdcli/cli/: index.html
v0.2.9/songbirdcli/helpers/: index.html
v0.2.9/songbirdcli/settings/: index.html
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/songbirdcli/cli/: index.html
v0.3.0/songbirdcli/helpers/: index.html
v0.3.1/: 404.html  index.html  sitemap.xml
v0.3.1/search/: search_index.json
v0.3.2/: 404.html  index.html  sitemap.xml
(+7 files in other folders)
