[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "songbirdcli"
authors = [
    {name = "Christian Boin"},
]
version = "0.2.0"
description = "Songbird's cli."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
exclude = ["app", "junit"]

[project.optional-dependencies]
# these dependencies are required for development,
# not for running the package.
dev = [
    "black",
    "click",
    "isort",
    "pytest",
    "pytest-cov",
]
package = [
    "build",
    "twine"
]