[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
songbirdcli = "songbirdcli.cli:run"

[project]
name = "songbirdcli"
authors = [
    {name = "Christian Boin"},
]
version = "0.3.2"
description = "Songbird's cli."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "cryptography",
    "deprecation",
    "eyeD3",
    "fake-useragent",
    "filetype",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "lxml",
    "lxml_html_clean",
    "mutagen",
    "parse",
    "playwright",
    "pycryptodomex",
    "pydantic",
    "pydantic-settings",
    "pyquery",
    "python-dotenv",
    "requests",
    "requests-htmlc",
    "songbirdcore",
    "w3lib",
    "yt-dlp",
    "yt-dlp-ejs",
]

[project.urls]
Documentation = "https://cboin1996.github.io/songbird/"

[project.optional-dependencies]
# these dependencies are required for development,
# not for running the package.
dev = [
    # lint
    "black",
    "click",
    "isort",
    # test
    "pytest",
    "pytest-cov",
    # docs
    "mkdocs",
    "mkdocs-material",
    "mike",
    "mkdocstrings-python"
]
package = [
    "build",
    "twine"
]

[tool.setuptools.packages.find]
exclude = ["app", "junit"]

[tool.pytest.ini_options]
log_cli_level="INFO"
log_cli=1
